--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,24 +7,36 @@ environment:
   sdk: '>=3.3.1 <4.0.0'
 
 dependencies:
-  dio: ^5.4.1
+  device_info_plus: ^10.1.2
+  dio: ^5.5.0+1
+  easy_localization: ^3.0.7
+  equatable: ^2.0.5
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.4
+  flutter_dotenv: ^5.1.0
   flutter_improved_scrolling: ^0.0.3
-  go_router: ^13.2.0
+  fpdart: ^1.1.0
+  get_it: ^7.7.0
+  go_router: ^14.2.3
   google_fonts: ^6.2.1
   hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  internet_connection_checker: ^2.0.0
+  package_info_plus: ^8.0.2
+  path_provider: ^2.1.4
   supabase_flutter: ^2.3.4
+  toastification: ^2.1.0
+  universal_html: ^2.2.4
   web_smooth_scroll: ^1.1.0
   webview_flutter: ^4.7.0
-  webview_flutter_web: ^0.2.2+4
-  webviewx_plus: ^0.5.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.0
+  flutter_lints: ^4.0.0
 
 flutter:
   uses-material-design: true
+  assets:
+    - .env
