--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   internet_connection_checker: ^2.0.0
   package_info_plus: ^8.0.2
   path_provider: ^2.1.4
+  skeletonizer: ^1.4.2
   supabase_flutter: ^2.3.4
   toastification: ^2.1.0
   universal_html: ^2.2.4
@@ -40,3 +41,4 @@ flutter:
   uses-material-design: true
   assets:
     - .env
+    - assets/
