--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   google_fonts: ^6.2.1
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  hydrated_bloc: ^9.1.5
   internet_connection_checker: ^2.0.0
   package_info_plus: ^8.0.2
   path_provider: ^2.1.4
